crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_in_sequence.txt
E = (call
  {
    (a)
    (E)
  }
)
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:4:6
  |
4 |     (E)
  |      ^
  |      |
  |      E references itself
  |
help: add an alternative to `E` that does not reference `E`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
